@@ -301,6 +301,10 @@ def sub_catcher(filename, vars, func, *args, **kw):
     """
     try:
         return func(*args, **kw)
+    except SkipTemplate, e:
+        print 'Skipping file %s' % filename
+        if str(e):
+            print str(e)
     except Exception, e:
         print 'Error in file %s:' % filename
         if isinstance(e, NameError):
@@ -326,14 +330,18 @@ def test(conf, true_cond, false_cond=None):
     else:
         return false_cond
 
-def skip_template(condition=True):
+def skip_template(condition=True, *args):
     """
     Raise SkipTemplate, which causes copydir to skip the template
     being processed.  If you pass in a condition, only raise if that
     condition is true (allows you to use this with string.Template)
+
+    If you pass any additional arguments, they will be used to
+    instantiate SkipTemplate (generally use like
+    ``skip_template(license=='GPL', 'Skipping file; not using GPL')``)
     """
     if condition:
-        raise SkipTemplate()
+        raise SkipTemplate(*args)
 
 def _add_except(exc, info):
     if not hasattr(exc, 'args') or exc.args is None:
